--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Libre+Barcode+39&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.font-barcode {
+  font-family: 'Libre Barcode 39', cursive;
+}
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
